<resources>
    <string name="app_name">Intentexample</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>


    <string name="button_speech_text">Push to talk</string>
    <string name="speech_not_supported">Your device doesn\\\'t support speech input</string>
    <string name="prompt_speech">Please say something</string>

    <string name="fill_in_text">Enter website URL here…</string>
    <string name="button_url_text">Open website</string>
    <string name="button_contacts_text">Open contacts</string>
    <string name="button_dialer_text">Open dialer</string>
    <string name="button_command_text">Start voice command </string>
    <string name="button_google_text">Search on Google</string>

    <string name="no_webbrowser">You have no webbrowser installed, please install a webbrowser such as Chrome, Safari, …</string>
    <string name="no_support">No application found to handle this request</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="url">The url is not valid</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="open_activity">Open a new activity</string>
    <string name="a_nice_image">A nice, funny image</string>
    <string name="show_full_screen">Show full screen</string>
    <string name="a_funny_image">A funny image</string>
</resources>
